--- a/style.css
+++ b/style.css
@@ -5,3 +5,75 @@
   font-weight: normal;
   font-style: normal;
 }
+
+:root {
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-pink: #e8adb3;
+
+  --font-large: 48px;
+  --font-mediun: 28px;
+  --font-regular: 18px;
+  --font-small: 16px;
+  --font-micro: 14px;
+
+  --size-border-radius: 4px;
+
+  --animation-duration: 300ms;
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "HSSaemaul-Regular", sans-serif;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-white);
+}
+ul {
+  padding-left: 0;
+}
+li {
+  list-style: none;
+}
+button {
+  background-color: turquoise;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+h1 {
+  font-size: var(--font-large);
+  font-weight: bold;
+  color: var(--color-black);
+  margin: 16px 0px;
+}
+
+h2 {
+  font-size: var(--font-mediun);
+  color: var(--color-black);
+  margin: 8px 0px;
+}
+
+h3 {
+  font-size: var(--font-regular);
+  color: var(--color-black);
+  margin: 8px 0px;
+}
+p {
+  font-size: var(--font-regular);
+  color: var(--color-black);
+  margin: 4px 0px;
+}
+/* navbar */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  background-color: var(--color-pink);
+}
