--- a/style.css
+++ b/style.css
@@ -77,3 +77,59 @@ p {
   padding: 16px;
   background-color: var(--color-pink);
 }
+.navbar__logo {
+  font-size: var(--font-mediun);
+  font-weight: bold;
+  color: var(--color-white);
+}
+.navbar__menu {
+  display: flex;
+}
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  color: var(--color-white);
+  cursor: pointer;
+}
+.navbar__menu__item.active {
+  border: 1px solid white;
+  border-radius: var(--size-border-radius);
+}
+.navbar__menu__item:hover {
+  background-color: #abd0bc;
+  color: var(--color-black);
+  border-radius: var(--size-border-radius);
+}
+.navbar__toggle-btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: var(--font-regular);
+  color: var(--color-white);
+  display: none;
+}
+#home {
+  background: url(./image/Pink\ Black\ White\ Red\ Photocentric\ Feminine\ Lifestyle\ Beauty\ Fashion\ YouTube\ Channel\ Art\ Banner.png)
+    center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-white);
+}
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+.home__contact {
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: bold;
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+}
