--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--color-white);
+  color: rgb(229, 245, 206);
 }
 ul {
   padding-left: 0;
@@ -40,7 +40,7 @@ li {
   list-style: none;
 }
 button {
-  background-color: turquoise;
+  background-color: rgb(239, 218, 146);
   cursor: pointer;
   border: none;
   outline: none;
@@ -97,6 +97,7 @@ p {
 }
 .navbar__menu__item:hover {
   background-color: #abd0bc;
+  font-size: 17px;
   color: var(--color-black);
   border-radius: var(--size-border-radius);
 }
@@ -109,15 +110,14 @@ p {
   display: none;
 }
 #home {
-  background: url(./image/Pink\ Black\ White\ Red\ Photocentric\ Feminine\ Lifestyle\ Beauty\ Fashion\ YouTube\ Channel\ Art\ Banner.png)
-    center/cover no-repeat;
+  background: url(./image/nt2.png) bottom/cover no-repeat;
   padding: 40px;
   text-align: center;
 }
 .home__avatar {
   width: 250px;
   height: 250px;
-  border-radius: 50%;
+  border-radius: 30%;
   border: 2px solid var(--color-white);
 }
 .home__title,
@@ -163,5 +163,5 @@ p {
 }
 .major_icon:hover {
   color: var(--color-pink);
-  transform: rotate(-30deg) scale(1.1);
+  transform: scale(1.2);
 }
