--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
   --color-white: #ffffff;
   --color-black: #000000;
   --color-pink: #e8adb3;
+  --color-gray: #837e7ee6;
+  --color-yellow: #fff7d1;
 
   --font-large: 48px;
   --font-mediun: 28px;
@@ -164,4 +166,219 @@ p {
 .major_icon:hover {
   color: var(--color-pink);
   transform: scale(1.2);
+}
+.major_title,
+.major_description {
+  color: var(--color-gray);
+}
+.major_description {
+  font-size: var(--font-small);
+}
+.job {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.job__description {
+  margin: 0 16px;
+  /* text-align: left; */
+}
+.job__name,
+.job__priod {
+  color: var(--color-gray);
+}
+
+.job__name {
+  font-size: var(--font-small);
+}
+.job__period {
+  font-size: var(--font-micro);
+}
+.about__jobs__icon {
+  width: 120ox;
+  height: 120px;
+}
+/* skill */
+#Skill {
+  background: url(./image/nt.png) center/cover no-repeat;
+}
+.skillset {
+  display: flex;
+  background-color: var(--color-gray);
+  color: var(--color-white);
+  margin: 20px 0;
+}
+.skillset__title {
+  color: var(--color-white);
+}
+.skillset__left {
+  flex-basis: 60%;
+  background-color: var(--color-black);
+  padding: 20px 40px;
+}
+.skill {
+  margin-bottom: 32px;
+}
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+}
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-gray);
+}
+.skill__value {
+  height: 3px;
+  background-color: var(--color-pink);
+}
+.skillset__right {
+  flex-basis: 40%;
+}
+.tools {
+  background-color: var(--color-gray);
+}
+.project_category {
+  margin: 40px;
+}
+.category__btn {
+  border: 1px solid var(--color-gray);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+.category__btn.active,
+.category__btn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+
+.category__count {
+  background-color: var(--color-pink);
+  border-radius: var(--size-border-radius);
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease;
+}
+.project__work {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-pink);
+}
+
+.project__image {
+  max-width: 100%;
+  max-height: 100%;
+  align-self: center;
+}
+
+.project__description {
+  position: absolute;
+  background-color: var(--color-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description {
+  opacity: 0.8;
+  transform: translateY(0px);
+}
+
+.project__description h3 {
+  color: var(--color-white);
+}
+.project__description h3::after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
+  background-color: aquamarine;
+}
+/* 추천서 */
+#testimonials {
+  margin: 40px;
+}
+.textimonial {
+  display: flex;
+  margin: 32px 0;
+  justify-content: center;
+}
+.testimonial__avatar {
+  width: 150px;
+  height: 150px;
+  border: 1px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+.testimonial__avatar:nth-child(odd) {
+  margin-right: 40px;
+}
+.testimonial__avatar:nth-child(even) {
+  margin-left: 40px;
+}
+.testimonial__speech-bubble {
+  padding: 18px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p {
+  color: var(--color-gray);
+}
+.testimonial__speech-bubble a {
+  color: var(--color-pink);
+}
+/* contact */
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: deeppink;
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+  transition: all var(--animation-duration) ease-in;
+}
+.contact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-white);
 }
