--- a/style.css
+++ b/style.css
@@ -135,6 +135,12 @@ p {
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
 }
+#intro {
+  background: url(./image/nt4.png) center/cover no-repeat;
+}
+#intro > p {
+  color: var(--color-yellow);
+}
 .section {
   padding: 50px;
   text-align: center;
@@ -155,8 +161,8 @@ p {
   line-height: 170px;
   font-size: 70px;
   margin: auto;
-  color: var(--color-pink);
-  border: 1px solid var(--color-pink);
+  color: var(--color-yellow);
+  border: 1px solid var(--color-yellow);
   border-radius: 50%;
   margin-bottom: 16px;
 }
@@ -169,7 +175,7 @@ p {
 }
 .major_title,
 .major_description {
-  color: var(--color-gray);
+  color: var(--color-white);
 }
 .major_description {
   font-size: var(--font-small);
@@ -229,13 +235,14 @@ p {
   background-color: var(--color-gray);
 }
 .skill__value {
-  height: 3px;
+  height: 10px;
   background-color: var(--color-pink);
 }
 .skillset__right {
   flex-basis: 40%;
 }
 .tools {
+  padding: 10px;
   background-color: var(--color-gray);
 }
 .project_category {
@@ -285,9 +292,14 @@ p {
   width: 280px;
   height: 250px;
   margin: 2px;
-  background-color: var(--color-pink);
 }
-
+#project {
+  background: url(./image/nt1.png) center/cover no-repeat;
+}
+#project h1,
+h3 {
+  color: var(--color-white);
+}
 .project__image {
   max-width: 100%;
   max-height: 100%;
@@ -330,7 +342,10 @@ p {
 }
 /* 추천서 */
 #testimonials {
-  margin: 40px;
+  background: url(./image/nt5.png) bottom/cover no-repeat;
+}
+#testimonials h3 {
+  color: var(--color-gray);
 }
 .textimonial {
   display: flex;
@@ -363,10 +378,18 @@ p {
   color: var(--color-pink);
 }
 /* contact */
+#contact {
+  background: url(./image/Pink\ Black\ White\ Red\ Photocentric\ Feminine\ Lifestyle\ Beauty\ Fashion\ YouTube\ Channel\ Art\ Banner.png)
+    center/cover no-repeat;
+}
 .contact__title,
 .contact__email,
 .contact__rights {
-  color: deeppink;
+  color: var(--color-white);
+}
+.contact__arrow {
+  background-color: var(--color-pink);
+  text-align: center;
 }
 
 .contact__title {
