--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  background-color: var(--color-pink);
+  /* background-color: var(--color-pink); */
+  background-color: transparent;
   z-index: 1;
   transition: all var(--animation-duration) ease-in-out;
 }
@@ -100,9 +101,11 @@ p {
   font-size: var(--font-mediun);
   font-weight: bold;
   color: var(--color-white);
+  margin-left: 10%;
 }
 .navbar__menu {
   display: flex;
+  margin-right: 10%;
 }
 
 .navbar__menu.open {
@@ -119,7 +122,8 @@ p {
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
-  color: var(--color-white);
+  /* color: var(--color-white); */
+  color: gray;
   cursor: pointer;
 }
 .navbar__menu__item.active {
@@ -128,7 +132,7 @@ p {
 }
 .navbar__menu__item:hover {
   background-color: #abd0bc;
-  font-size: 17px;
+  font-size: 16px;
   color: var(--color-black);
   border: 1px solid white;
   border-radius: var(--size-border-radius);
@@ -157,6 +161,7 @@ p {
 .home__title,
 .home__description {
   color: var(--color-white);
+  margin-bottom: 20px;
 }
 .home__contact {
   color: var(--color-white);
@@ -171,7 +176,8 @@ p {
   background-color: #f4fb73;
 }
 #intro {
-  background: url(./image/nt4.png) center/cover no-repeat;
+  /* background: url(./image/nt4.png) center/cover no-repeat; */
+  background-color: wheat;
 }
 #intro > p {
   color: var(--color-yellow);
@@ -191,26 +197,28 @@ p {
   margin: 80px 0;
 }
 .major_icon {
-  width: 170px;
-  height: 170px;
+  padding-top: 50px;
+  width: 400px;
   line-height: 170px;
   font-size: 70px;
   margin: auto;
   color: var(--color-yellow);
   border: 1px solid var(--color-yellow);
-  border-radius: 50%;
-  margin-bottom: 16px;
+  border-radius: 5%;
 }
 .major_icon i {
   transition: all var(--animation-duration) ease;
 }
 .major_icon:hover {
   color: var(--color-pink);
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 .major_title,
 .major_description {
   color: var(--color-white);
+}
+.major_title {
+  margin-top: 50px;
 }
 .major_description {
   font-size: var(--font-small);
@@ -241,7 +249,8 @@ p {
 }
 /* skill */
 #Skill {
-  background: url(./image/nt.png) center/cover no-repeat;
+  /* background: url(./image/nt.png) center/cover no-repeat; */
+  background-color: bisque;
 }
 .skillset {
   display: flex;
@@ -314,11 +323,12 @@ p {
   opacity: 0;
   transition: all var(--animation-duration) ease;
 }
-.project__work {
-  display: flex;
+/* .project__work { */
+/* display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-}
+  justify-content: center; */
+/* margin: 0 auto; */
+/* } */
 .project {
   position: relative;
   display: flex;
@@ -327,9 +337,11 @@ p {
   width: 280px;
   height: 250px;
   margin: 2px;
+  text-align: center;
 }
 #project {
-  background: url(./image/nt1.png) center/cover no-repeat;
+  /* background: url(./image/nt1.png) center/cover no-repeat; */
+  background-color: gainsboro;
 }
 #project h1,
 h3 {
@@ -354,6 +366,12 @@ h3 {
   opacity: 0;
   transform: translateY(10px);
   transition: all var(--animation-duration) ease-in;
+}
+.slide_wrap {
+  margin-bottom: 50px;
+}
+h1 {
+  margin-bottom: 50px;
 }
 
 .project:hover .project__description {
@@ -414,8 +432,9 @@ h3 {
 }
 /* contact */
 #contact {
-  background: url(./image/Pink\ Black\ White\ Red\ Photocentric\ Feminine\ Lifestyle\ Beauty\ Fashion\ YouTube\ Channel\ Art\ Banner.png)
-    center/cover no-repeat;
+  /* background: url(./image/Pink\ Black\ White\ Red\ Photocentric\ Feminine\ Lifestyle\ Beauty\ Fashion\ YouTube\ Channel\ Art\ Banner.png) */
+  /* center/cover no-repeat; */
+  background-color: black;
 }
 .contact__title,
 .contact__email,
@@ -477,4 +496,74 @@ contact__links {
 }
 .project.see {
   display: "";
+}
+
+.self {
+  width: 15%;
+}
+.flex {
+  display: flex;
+}
+.profile_icon {
+  margin-right: 50px;
+  width: 32px;
+  height: 32px;
+}
+.small_px {
+  font-size: 14px;
+}
+.mb_intro {
+  margin-bottom: 40px;
+}
+.between {
+  justify-content: space-around;
+}
+.left {
+  text-align: left;
+}
+
+.hobby_box {
+  border: 1px solid beige;
+  border-radius: 7%;
+  padding: 1%;
+}
+.hobby_boxes {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+.mr_ah {
+  margin-right: 50px;
+  margin-top: 3%;
+  margin-left: 50px;
+}
+.a_link {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+}
+.ah_bo {
+  border: 2px solid black;
+  /* border-radius: 9%; */
+  width: 35%;
+  margin: 0 auto;
+}
+.mb_5 {
+  margin-bottom: 100px;
+}
+.project_title {
+  margin-bottom: 30px;
+}
+.project_text {
+  width: 30%;
+  margin-left: 50px;
+}
+.last_link {
+  text-decoration: none;
+  font-size: 30px;
+}
+hr {
+  color: black;
+  border: 2px solid honeydew;
+  margin-bottom: 100px;
+  margin-top: 100px;
 }
